# rust_circuit_public

./: .gitignore  Cargo.toml  LICENSE.md  dao.md  faq.md  naming_rules.md  pyproject.toml  readme.md  rust_circuit_example.py  rust_rewrite_example.py
benches/: benches.rs
circuit_base/: Cargo.toml  build.rs  py_general_function_spec.py
circuit_base/src/: cached_circuit_properties.rs  circuit_node_private.rs  circuit_utils.rs  computational_node.rs  constant.rs  cumulant.rs  expand_node.rs  generalfunction.rs  lib.rs  module.rs  named_axes.rs  nrc.rs  opaque_iterative_matcher.rs  parsing.rs  print.rs  print_html.rs  set_of_circuits.rs  set_symbolic_shape.rs  variable_nodes.rs
circuit_rewrites/: Cargo.toml
circuit_rewrites/src/: algebraic_rewrite.rs  batching.rs  canonicalize.rs  circuit_manipulation.rs  circuit_optimizer.rs  compiler_heuristics.rs  compiler_strip.rs  concat_rewrite.rs  debugging.rs  deep_rewrite.rs  diag_rewrite.rs  generalfunction_rewrite.rs  lib.rs  module_rewrite.rs  nb_rewrites.rs  sampling.rs  scatter_rewrite.rs  schedule_send.rs  scheduled_execution.rs  scheduling_alg.rs  scheduling_z3.rs  server.rs
get_update_node/: Cargo.toml
get_update_node/src/: iterative_matcher.rs  lib.rs  library.rs  matcher.rs  matcher_debug.rs  operations.rs  sampler.rs  transform.rs
nb_operations/: Cargo.toml
nb_operations/src/: cumulant_rewrites.rs  diff.rs  distribute_and_factor.rs  index_rewrites.rs  lib.rs  modules.rs  nest.rs
python/rust_circuit/: __init__.py  _rust.py  _rust.pyi  algebric_rewrite.py  circuits_very_named_tensor.py  cum_algo.py  indexer.py  interop_rust.py  jax_to_module.py  model_rewrites.py  module_library.py  module_utils.py  optional.py  py_utils.py  rrfs.py  scope_manager.py
python/rust_circuit/causal_scrubbing/: dataset.py  experiment.py  hypothesis.py  testing_utils.py
python/rust_circuit/demos/: notebook_testing.py
python/rust_circuit/demos/causal_scrubbing/: causal_scrubbing_simple.py  incr_number_simple.py  pool.py
python/rust_circuit/demos/paren_balancer/: causal_scrubbing_experiments.py  setup.py  test_paren_balancer_exercises.py  writeup_attribution_plots.py
python/rust_circuit/demos/rust_circuit_demos/: basic_scope_manager.py  custom_general_function.py  fancy_error.py  handcrafted_model_cumulants.py  iterative_matchers.py  modules_and_symbols.py  nest.py  printing_parsing.py  push_down_index.py  push_down_module.py  save_models.py  simp.py  transformer_config.py  uitest.py
python/rust_circuit/generalfuncs/: rotary_pos_emb.py
python/rust_circuit/index_util/: __init__.py
python/rust_circuit/index_util/internal/: general_function.py  infer_shapes.py  ops.py  parse.py  resolve.py  view.py
python/rust_circuit/ui/: circuits_very_named_tensor.py  cui.py  encoding.py  ui.py  very_named_tensor.py
python/tests/: requirements.txt  test_algebric_rewrites.py  test_auto_names.py  test_circuit_type.py  test_conv.py  test_convenience_methods.py  test_cum_algo.py  test_expand_at_axes.py  test_expand_symbolic.py  test_flags.py  test_gen_index.py  test_general_function.py  test_immutable_check.py  test_index_util.py  test_jax_to_module.py  test_models.py  test_module.py  test_nb_rewrites.py  test_nest.py  test_notebooks_and_demos.py  test_push_down_index.py  test_python_callables.py  test_rust_batching.py  test_rust_get_update.py  test_rust_large_models.py  test_rust_printing.py  test_rust_python_manipulation.py  test_rust_rewrite.py  test_rust_schedule.py  test_rust_variables.py  test_sample_transform.py  test_schedule_serialize.py  test_serialization.py  test_server.py  test_set_of_circuit.py  test_tensor_saving.py  test_type_alias_import.py
python/tests/causal_scrubbing/: test_experiment.py  test_hypothesis.py
remix/: remix_d1_instructions.md  remix_d1_solution.py  remix_d2_instructions.md  remix_d2_solution.py  remix_d2_utils.py  remix_d3_instructions.md  remix_d3_solution.py  remix_d3_test.py  remix_d4_part1_instructions.md  remix_d4_part1_solution.py  remix_d4_part2_instructions.md  remix_d4_part2_setup.py  remix_d4_part2_solution.py  remix_d4_part2_test.py  remix_d5_acdc.py  remix_d5_acdc_tutorial.py  remix_d5_acdc_utils.py  remix_d5_on_the_fly_CondSampler_demo.py  remix_d5_part1_instructions.md  remix_d5_part1_solution.py  remix_d5_part2_instructions.md  remix_d5_part2_solution.py  remix_d5_part3_instructions.md  remix_d5_part3_solution.py  remix_d5_part4_instructions.md  remix_d5_part4_solution.py  remix_d5_utils.py  remix_extra_utils.py  remix_utils.py
rr_util/: Cargo.toml  get_primes.py  py_circuit_interop.py  rust_circuit_type_utils.py  tensor_hash.py
rr_util/src/: caching.rs  char_tokenizer.rs  compact_data.rs  eq_by_big_hash.rs  errors_util.rs  lazy.rs  lib.rs  lru_cache.rs  name.rs  opt_einsum.rs  py_types.rs  python_callables.rs  python_wrapped.rs  rearrange_spec.rs  repr.rs  rrfs.rs  set_cover.rs  symbolic_size.rs  tensor_db.rs  tensor_util.rs  union_find.rs  util.rs
src/: error.rs  lib.rs
tests/: compiler_bench_runs.rs  tests.rs
