[package]
name = "circuit_rewrites"
version = "0.0.0"
edition = "2021"

[lib]
name = "circuit_rewrites"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "print_simp_fn_stub_part"

[dependencies]
blake3 = "1.3.1"
pyo3.workspace = true
cached = "0.38.0"
num-bigint = "0.4.3"
anyhow = { version = "1.0.60", features = ["backtrace"] }
thiserror = "1.0.32"
paste = "1.0.8"
itertools = "0.10.3"
smallvec = { version = "1.10.0", features = ["union"] }
z3 = "0.11.2"
macro_rules_attribute = "0.1.2"
rustc-hash = "1.1.0"
base16 = "0.2.1"
regex = "1.6.0"
miniserde = "0.1"
tiny_http="0.11"
ureq = "2.5.0"
url-escape = "0.1.1"
rand = {version = "0.8.5", features = ["small_rng"]}

rr_util = {path = "../rr_util"}
circuit_base = {path = "../circuit_base"}

# i read this and it's pretty minimal+reasonable
bit-iter = "1.1.1" 

once_cell = "1.14.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
extension-module = ["pyo3/extension-module"]

# z3 is a hassle to install on Mac so this option statically links it at the cost of slower link times
# we can't use [target.'cfg(macos)'.dependencies] due to a cargo bug (https://github.com/rust-lang/cargo/issues/1197)
# to use, append `--features static-z3` to cargo commands and `maturin develop` on Mac
static-z3 = ["z3/static-link-z3"]

# default = ["extension-module"]
default = []

