[package]
name = "nb_operations"
version = "0.0.0"
edition = "2021"

[lib]
name = "nb_operations"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
anyhow = { version = "1.0.60", features = ["backtrace"] }
thiserror = "1.0.32"
smallvec = { version = "1.10.0", features = ["union"] }
macro_rules_attribute = "0.1.2"
rustc-hash = "1.1.0"
paste = "1.0.8"
cached = "0.38.0"
blake3 = "1.3.1"
itertools = "0.10.3"

rr_util = {path = "../rr_util"}
circuit_base = {path = "../circuit_base"}
circuit_rewrites = {path = "../circuit_rewrites"}
get_update_node = {path = "../get_update_node"}

# i read this and it's pretty minimal+reasonable
bit-iter = "1.1.1" 

once_cell = "1.14.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
extension-module = ["pyo3/extension-module"]

# default = ["extension-module"]
default = []

