[package]
name = "rr_util"
version = "0.0.0"
edition = "2021"

[lib]
name = "rr_util"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["rlib"]


[dependencies]
anyhow = { version = "1.0.60", features = ["backtrace"] }
pyo3.workspace = true
macro_rules_attribute = "0.1.2"
thiserror = "1.0.32"
regex = "1.6.0"
cached = "0.38.0"
paste = "1.0.8"
blake3 = "1.3.1"
smallvec = { version = "1.10.0", features = ["union"] }
itertools = "0.10.3"
rustc-hash = "1.1.0"
once_cell = "1.14.0"
num-bigint = "0.4.3"
base16 = "0.2.1"
z3 = "0.11.2"
threadpool = "1.8.1"
indexmap = "1.9.2"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
static-z3 = ["z3/static-link-z3"]
